- fix tag cloud display with IE6/IE7 (without additionnal css hacks) - collapsed several identical selectors into one
git-svn-id: http://piwigo.org/svn/trunk@2648 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/template/yoga/default-layout.css
+++ b/template/yoga/default-layout.css
@@ -212,8 +212,7 @@ UL.tagSelection LI {
 	margin: 1em 2em 1em 2em;
 }
 
-#fullTagCloud LI {
-	display: inline;
+#fullTagCloud SPAN {
 	white-space: nowrap;
 	margin: 0 2px;
 }
