--- a/template/yoga/menubar.css
+++ b/template/yoga/menubar.css
@@ -82,8 +82,7 @@ FORM#quickconnect FIELDSET DIV {
 	margin: 5px 0;
 }
 
-#menubar #menuTagCloud LI
+#menubar #menuTagCloud SPAN
 {
-	display: inline;
-	white-space: nowrap;	/* No line break in the LI but Opera set nowrap to */
+	white-space: nowrap;
 }
