--- a/template/yoga/theme/dark/theme.css
+++ b/template/yoga/theme/dark/theme.css
@@ -35,18 +35,16 @@ H2, #menubar DT {
 	background-image: url(images/tableh2_bg.png);
 	background-repeat: repeat-x;
 	background-position: center;
+	border-top: 1px solid #000;
 }
 
 /* borders */
 #menubar DL, .content{
-	border: 1px solid #000000;
+	border: 1px solid #000;
 }
 
-#imageHeaderBar {
-	border-top: 1px solid #000000;
-}
 H2, #menubar DT, #imageToolBar {
-	border-bottom: 1px solid #000000;
+	border-bottom: 1px solid #000;
 }
 
 FIELDSET, INPUT, SELECT, TEXTAREA,
@@ -70,7 +68,7 @@ FIELDSET, INPUT, SELECT, TEXTAREA,
 
 /* links */
 A, INPUT.rateButton {
-	color: #FFFFFF;
+	color: #fff;
 	border: none;
 }
 
